I made slider elements, added logic to change the quantity, added an “attention” sign

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -24,6 +24,7 @@
     --color-text-brown300: #845f50;
     --color-text-brown400: #bea393;
     --color-text-browna500: #bba391;
+    --color-text-browna600: #9f806fe6;
 
     --color-border-gray100: #d7c7b580;
     --color-border-gray200: #f1f1f199;
